--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Custom stylesheets-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  	<link href="style.css" rel="stylesheet" />
-  	<script type="text/javascript" src="main.js"></script>
+  	<link href="stylesheets/style.css" rel="stylesheet" />
+  	<script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
