--- a/about.html
+++ b/about.html
@@ -1,7 +1,11 @@
-<div id="about-content">
-  <div class="container">
-    <h3 style="color: white">
-      About Michael
-    </h3>
+<div id="about-content" class="container-fluid">
+  <h1 class="text-white display-4">About</h1>
+  <div class="container" style="position: relative">
+    <div id="about-bar" class="style-bar"></div>
+    <img src="projects/huvo/huvo.png" style="width: 100%">
   </div>
 </div>
+<script type="text/javascript">
+  // Set up side bar
+  $("#about-bar").css({top: 0, left: ($("#about-content div").first().outerWidth() - $("#about-content").first().width()) / 2 + 18, height: $("#about-content div").first().height()});
+</script>
