--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#about">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -32,9 +32,9 @@
       </div>
     </nav>
     <div id="scrollbar">
-      <div id="about" class="container"></div>
-      <div id="projects" class="container"></div>
-      <div id="links" class="container"></div>
+      <div id="about"></div>
+      <div id="projects"></div>
+      <div id="links"></div>
     </div>
     <div class="scripts">
       <!-- JQuery -->
@@ -45,13 +45,15 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
       <!-- Custom Scripts -->
-  	  <script type="text/javascript" src="scripts/main.js"></script>
       <script type="text/javascript">
-        $(function(){
-          $("#about").load("about.html");
-          $("#projects").load("projects.html");
-          $("#links").load("links.html");
-        });
+        // Make the page take up 100% width
+        $("body").css("padding-top", $(".navbar").outerHeight())
+        $("#scrollbar").height($(window).height() - $(".navbar").outerHeight());
+
+        // Load pages
+        $("#about").load("about.html");
+        $("#projects").load("projects.html");
+        $("#links").load("links.html");
       </script>
     </div>
   </body>
