--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
     </nav>
-    <div id="scrollbar">
+    <div id="scrollbar" tabindex="-1">
       <div id="about"></div>
       <div id="projects"></div>
       <div id="links"></div>
@@ -49,6 +49,7 @@
         // Make the page take up 100% width
         $("body").css("padding-top", $(".navbar").outerHeight())
         $("#scrollbar").height($(window).height() - $(".navbar").outerHeight());
+        $("#scrollbar").focus();
 
         // Load pages
         $("#about").load("about.html");
