--- a/projects.html
+++ b/projects.html
@@ -11,5 +11,9 @@
 <script src="scripts/cards.js"></script>
 <script type="text/javascript">
   // Set up side bar
-  $("#projects-bar").css({top: 0, left: ($("#projects-content div").first().outerWidth() - $("#projects-content").first().width()) / 2 + 18, height: $("#projects-content div").first().height()});
+  $("#projects-bar").css({
+    top: 0,
+    left: ($("#projects-content div").first().outerWidth() - $("#projects-content").first().width()) / 2 + 18,
+    height: $("#projects-content div").first().height()
+  });
 </script>
