Animated side bars

--- a/about.html
+++ b/about.html
@@ -73,10 +73,10 @@
               <span style="float: right">&nbsp;</span>
               <span class="badge badge-success" style="float: right">business</span>
             </li>
-            <li class="list-group-item bg-dark text-white"></li>
-            <li class="list-group-item bg-dark text-white"></li>
-            <li class="list-group-item bg-dark text-white"></li>
-            <li class="list-group-item bg-dark text-white"></li>
+            <li class="list-group-item bg-dark text-white">&nbsp;</li>
+            <li class="list-group-item bg-dark text-white">&nbsp;</li>
+            <li class="list-group-item bg-dark text-white">&nbsp;</li>
+            <li class="list-group-item bg-dark text-white">&nbsp;</li>
           </ul>
         </div>
       </div>
@@ -88,6 +88,6 @@
   $("#about-bar").css({
     top: 0,
     left: ($("#about-content div").first().outerWidth() - $("#about-content").first().width()) / 2 + 18,
-    height: $("#about-content div").first().height()
+    height: 0
   });
 </script>
