--- a/links.html
+++ b/links.html
@@ -35,5 +35,9 @@
   // Set up tooltips
   $('[data-toggle="tooltip"]').tooltip();
   // Set up side bar
-  // $("#links-bar").css({top: 0, left: ($("#links-content div").first().outerWidth() - $("#links-content").first().width()) / 2 + 18, height: $("#links-content div").first().height()});
+  $("#links-bar").css({
+    top: 0,
+    left: ($("#links-content div").first().outerWidth() - $("#links-content").first().width()) / 2 + 18,
+    height: 0
+  });
 </script>
