--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,6 @@
   $("#projects-bar").css({
     top: 0,
     left: ($("#projects-content div").first().outerWidth() - $("#projects-content").first().width()) / 2 + 18,
-    height: $("#projects-content div").first().height()
+    height: 0
   });
 </script>
