--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <div class="container" style="position: relative">
     <div id="about-bar" class="style-bar"></div>
     <!-- Content Start -->
+    <!-- Skills -->
     <h3 class="text-white subheader">Skills</h3>
     <div id="skills-content" class="row justify-content-around">
       <!-- Programming Languages -->
@@ -126,6 +127,49 @@
             <li class="list-group-item bg-dark text-white">&nbsp;</li>
             <li class="list-group-item bg-dark text-white">&nbsp;</li>
             <li class="list-group-item bg-dark text-white">&nbsp;</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- Education -->
+    <h3 class="text-white subheader">Education</h3>
+    <div id="education-content" class="list-group">
+      <div class="card bg-dark text-white">
+        <button class="btn btn-dark collapsed card-header w-100" id="nu-heading" data-toggle="collapse" data-target="#nu-collapse">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Northwestern University</h5>
+            <small>GPA: 3.689 (4.0)</small>
+          </div>
+          <div class="d-flex w-100">
+            <small>Sept 2016 - June 2020</small>
+          </div>
+        </button>
+        <div id="nu-collapse" class="card-body collapse" data-parent="#education-content">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item bg-dark text-white align-items-start">Mathematical Foundations of Computer Science</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Introduction to Machine Learning</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Database Systems</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Natural Language Processing</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Affective Computing</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Human Computer Interaction</li>
+            <li class="list-group-item bg-dark text-white align-items-start">Introduction to Artificial Intelligence</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card bg-dark text-white">
+        <button class="btn btn-dark collapsed card-header w-100" id="chs-heading" data-toggle="collapse" data-target="#chs-collapse">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Cedarburg High School</h5>
+            <small>GPA: 4.33 (4.66)</small>
+          </div>
+          <div class="d-flex w-100">
+            <small>Sept 2012 - June 2016</small>
+          </div>
+        </button>
+        <div id="chs-collapse" class="card-body collapse" data-parent="#education-content">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item bg-dark text-white align-items-start">AP Computer Science</li>
+            <li class="list-group-item bg-dark text-white align-items-start">AP Calculus</li>
           </ul>
         </div>
       </div>
